<resources>
    <!-- App Basics -->
    <string name="app_name">Reciper</string>
    <string name="title_home">Home</string>
    <string name="title_converter">Converter</string>
    <string name="title_settings">Settings</string>
    <string name="skuska">skuska</string>
    <string name="test" translatable="false">Test</string>

    <!-- Recipes -->
    <string name="text_youtube_search">YouTube Search:</string>
    <string name="foodname">Food name</string>
    <string name="ingredients">Ingredients:</string>
    <string name="procedure">Procedure:</string>
    <string name="my_recipes">My Recipes:</string>
    <string name="title_recipe">Recipe</string>
    <string name="link" translatable="false">Link:</string>
    <string name="recipe_procedure">Recipe procedure</string>
    <string name="recipe_create">Create a new Recipe</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="add_ingredient">Add ingredient</string>

    <!-- Converter -->
    <string name="decagrams">Decagrams</string>
    <string name="cups">Cups</string>
    <string name="grams">Grams</string>
    <string name="table_spoons">Table Spoons</string>
    <string name="tea_spoons">Tea Spoons</string>
    <string name="milliliters">Milliliters</string>
    <string name="pints">UK Pints</string>
    <string name="ounces">Ounces</string>
    <string name="recalcto">Recalculate to</string>
    <string name="portions">portions:</string>

    <!-- Preferences -->
    <string name="converter">Ingredients converter</string>
    <string name="app_version" translatable="false">0.7</string>
    <string name="title_version">Version</string>
    <string name="app_about">This application is a semestral project for Fundamentals of App Development (T120B169) course, at KTU university in Kaunas.\n© Martin Timko, 2020</string>
    <string name="browse_github">Browse GitHub repository</string>
    <string name="contact_developer">Contact developer</string>
    <string name="enable_youtube">Enable YouTube search</string>
    <string name="enable_youtube_on">Searching video recipes is allowed</string>
    <string name="enable_youtube_off">Searching video recipes is disabled</string>
    <string name="cloud_backup">Cloud backup</string>
    <string name="fav_weight_unit">Preferred weight unit</string>
    <string name="fav_volume_unit">Preferred volume unit</string>
    <string name="choose_email_client">Choose an email client</string>
    <string name="contact_developer_2">Feel free to contact me!</string>
    <string name="default_portions_ratio">Default portions count</string>

    <!-- Universal -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="automatic">(automatic)</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="easter_egg" translatable="false">You found my Easter Egg! 😮♥</string>
    <string name="media">Media</string>
    <string name="media_descriptor">Recipe media</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="close">Close</string>
    <string name="select_gallery">Select from gallery</string>
    <string name="recordVideo">Record a video</string>
    <string name="takePhoto">Take a photo</string>
    <string name="newMedia">New media</string>
    <string name="open">Open</string>
    <string name="backup">Backup now</string>
    <string name="restorenow">Restore now</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="clear">Clear</string>

</resources>