<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:id="@+id/language"
        android:defaultValue="system"
        android:entries="@array/languages_entries"
        android:entryValues="@array/languages_values"
        android:key="language"
        android:title="Language"
        android:icon="@drawable/ic_translate"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:id="@+id/youtube_enabled"
        app:key="youtube_enabled"
        app:summaryOn="@string/enable_youtube_on"
        app:summaryOff="@string/enable_youtube_off"
        android:icon="@drawable/ic_youtube2"
        app:title="@string/enable_youtube" />

    <PreferenceCategory
        android:id="@+id/category_converter"
        app:title="@string/converter"
        style="@style/CustomPreferenceCategory" >

        <ListPreference
            android:id="@+id/fav_weight_unit"
            android:defaultValue="system"
            style="@style/CustomPreference"
            android:icon="@drawable/ic_weight"
            android:key="fav_weight_unit"
            android:title="@string/fav_weight_unit"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:id="@+id/fav_volume_unit"
            android:defaultValue="system"
            style="@style/CustomPreference"
            android:icon="@drawable/ic_drop"
            android:key="fav_volume_unit"
            android:title="@string/fav_volume_unit"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="1/4"
            android:key="default_portions"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/default_portions_ratio"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:id="@+id/category_cloud"
        android:title="@string/cloud_backup"
        style="@style/CustomPreferenceCategory" >

        <Preference
            android:id="@+id/note_backup"
            android:selectable="false"
            android:enabled="false"
            android:title="@string/automatic"
            style="@style/CustomPreference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:id="@+id/category_about"
        android:title="About"
        style="@style/CustomPreferenceCategory" >
        <Preference
            android:id="@+id/about"
            android:selectable="false"
            android:enabled="false"
            android:title="@string/app_about"
            style="@style/CustomPreference" />

        <Preference
            android:id="@+id/version"
            android:summary="@string/app_version"
            android:key="version"
            android:title="@string/title_version"
            style="@style/CustomPreference" />

        <Preference
            android:id="@+id/github"
            android:title="@string/browse_github"
            style="@style/CustomPreference">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/m4rtin195/Reciper" />
        </Preference>

        <Preference
            android:id="@+id/contact"
            android:title="@string/contact_developer"
            android:summary="@string/contact_developer_2"
            android:key="contact_developer"
            style="@style/CustomPreference" >
            <!-- resp static intent-->
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>