<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_home_youtube"
        android:icon="@drawable/ic_youtube"
        android:orderInCategory="50"
        android:title="@string/text_youtube_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home_converter"
        android:icon="@drawable/ic_converter"
        android:orderInCategory="100"
        android:title="@string/title_converter"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home_settings"
        android:title="@string/title_settings"
        app:showAsAction="always" />

</menu>