<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.martin.reciper.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.martin.reciper.ui.converter.ConverterFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_converter" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.martin.reciper.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/recipe"
        android:name="com.martin.reciper.ui.recipe.RecipeFragment"
        android:label="Recipe"
        tools:layout="@layout/fragment_recipe" />
</navigation>