<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.martin.reciper.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_recipe"
            app:destination="@id/navigation_recipe"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_home_to_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_converter"
            app:destination="@id/navigation_converter" />
    </fragment>

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.martin.reciper.ui.converter.ConverterFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_converter" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.martin.reciper.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/preferences_settings" >
        <action
            android:id="@+id/action_navigation_settings_self"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_testingActivity"
            app:destination="@id/navigation_testingActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.martin.reciper.ui.recipe.RecipeFragment"
        tools:layout="@layout/fragment_recipe">

        <argument
            android:name="Recipe"
            app:argType="reference" />

        <action
            android:id="@+id/action_navigation_recipe_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_recipe_to_navigation_converter"
            app:destination="@id/navigation_converter" />
    </fragment>

    <activity
        android:id="@+id/navigation_testingActivity"
        android:name="com.martin.reciper.TestingActivity"
        android:label="TestingActivity" />

</navigation>