<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.converter.ConverterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_grams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grams" />

                <EditText
                    android:id="@+id/edit_grams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />

            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_decagrams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decagrams" />

                <EditText
                    android:id="@+id/edit_decagrams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_cups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cups" />

                <EditText
                    android:id="@+id/edit_cups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_ounces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ounces" />

                <EditText
                    android:id="@+id/edit_ounces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_milliliters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milliliters" />

                <EditText
                    android:id="@+id/edit_milliliters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />

            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_pints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pints" />

                <EditText
                    android:id="@+id/edit_pints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_spoons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spoons" />

                <EditText
                    android:id="@+id/edit_spoons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_teaspoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tea_spoons" />

                <EditText
                    android:id="@+id/edit_teaspoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/text_convertResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="= XXX,XX sth"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_dividing1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divideto" />

            <EditText
                android:id="@+id/edit_portions"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:ems="10"
                android:inputType="numberSigned"
                android:numeric="signed|integer"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/text_dividing2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portions" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/text_convertResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="= XXX,XX sth"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>